--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="text-container">
-                            <h1 class="h1-large">The #1 CRM app for <span class="replace-me">small business, young startups, bootstrappers</span></h1>
+                            <h1 class="h1-large">PRINCIPIOS DE DISEÑO DE PAGINA WEB<span class="replace-me">small business, young startups, bootstrappers</span></h1>
                             <p class="p-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim, neque ut vanic barem ultrices sollicitudin</p>
                             <a class="btn-solid-lg" href="sign-up.html">Sign up for free</a>
                         </div> <!-- end of text-container -->
