--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
-                            <h2>Manage your customer’s expectations and get them to trust you</h2>
+                            <h2>Gestiona las expectativas de tus clientes y haz que confíen en ti</h2>
                             <p>Vestibulum ullamcorper augue ex, imperdiet tincidunt tellus bibendum inconsectetur rutrum mauris orbi scelerisque cursus augue, ac suscipit sem mattis at ut suscipit</p>
                             <a class="btn-solid-reg" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Modal</a>
                         </div> <!-- end of text-container -->
@@ -530,7 +530,7 @@
                             <ul class="list-unstyled li-space-lg p-small">
                                 <li>Important: <a href="terms.html">Terms & Conditions</a>, <a href="privacy.html">Privacy Policy</a></li>
                                 <li>Useful: <a href="#">Colorpicker</a>, <a href="#">Icon Library</a>, <a href="#">Illustrations</a></li>
-                                <li>Menu: <a href="#header">Home</a>, <a href="#features">Features</a>, <a href="#details">Details</a>, <a href="#pricing">Pricing</a></li>
+                                <li>Menu: <a href="#header">HOGAR</a>, <a href="#features">CARACTERISTICAS</a>, <a href="#details">DETALLES</a>, <a href="#pricing">PRECIOS</a></li>
                             </ul>
                         </div> <!-- end of footer-col -->
                         <div class="footer-col third">
