--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
-                            <h2>Haz todo lo bueno para tus cliente y ganate su confianza</h2>
+                            <h2>Haz todo lo bueno para tus clientes y ganate su confianza</h2>
                             <p>Vestibulum ullamcorper augue ex, imperdiet tincidunt tellus bibendum inconsectetur rutrum mauris orbi scelerisque cursus augue, ac suscipit sem mattis at ut suscipit</p>
                             <a class="btn-solid-reg" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Modal</a>
                         </div> <!-- end of text-container -->
