--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
                             <h2>Haz todo lo bueno para tus clientes y ganate su confianza</h2>
-                            <p>Vestibulum ullamcorper augue ex, imperdiet tincidunt tellus bibendum inconsectetur rutrum mauris orbi scelerisque cursus augue, ac suscipit sem mattis at ut suscipit</p>
+                            <p>La confianza con los clientes es un valor que viene dado por la eficiente atencion de cada uno de los integrantes de la empresa, la sonrisa el buen animo positivo es un valor incalculable </p>
                             <a class="btn-solid-reg" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Modal</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
