--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
                         <div class="text-container">
-                            <h2>Anyone can start using the app with minimum skills</h2>
+                            <h2>El uso de las aplicaciones contenidas en su celular son muy faciles de usar, se ah realizado con mucho amor pensando en nuestros apreciados clientes</h2>
                             <p>Velit dictum non proin egestas convallis nunc, eu auctor massa. Nam hendrerit, eros ut viverra lobortis, mauris nisi porta risus, placerat dignissim tellus auctor masse</p>
                             <ul class="list-unstyled li-space-lg">
                                 <li class="d-flex">
